syntax = "proto3";
package pt.ulisboa.tecnico.tuplespaces.contract.user;

import "Common.proto";

message AddRequest { Tuple newTuple = 1; }

message AddResponse { bool active = 1; }

message ReadRequest { Tuple template = 1; }

message ReadResponse {
  oneof result {
    Tuple tuple = 1;
    bool active = 2;
  }
}

message TakeRequest { Tuple template = 1; }

message TakeResponse {
  oneof result {
    Tuple tuple = 1;
    bool active = 2;
  }
}

service UserService {
  rpc add(AddRequest) returns (AddResponse);
  rpc read(ReadRequest) returns (ReadResponse);
  rpc take(TakeRequest) returns (TakeResponse);
}
